5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4343/executions/1595_1571.log
== SUBMITION (2019-04-16 15:55:23) 
-- CODE:
#Leitura da mensagem a partir do teclado:
msg = input("Escreva uma mensagem")
print(msg.lower())
-- EXECUTION TIME:
0.12873
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
primeiro_caso_de_teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:55:35) 
-- CODE:
#Leitura da mensagem a partir do teclado:
msg = input("Escreva uma mensagem:")
print(msg.lower())
-- EXECUTION TIME:
0.116158
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
primeiro_caso_de_teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:55:50) 
-- CODE:
#Leitura da mensagem a partir do teclado:
msg = input("Escreva uma mensagem:")
print(msg.lower())
-- EXECUTION TIME:
0.223474
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
primeiro_caso_de_teste
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:55:53) 
-- CODE:
#Leitura da mensagem a partir do teclado:
msg = input("Escreva uma mensagem:")
print(msg.lower
-- EXECUTION TIME:
0.127684
-- ERROR:
  File "/home/codebench/codes/1595/1571/main.py", line 4
    
                   ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:55:55) 
-- CODE:
#Leitura da mensagem a partir do teclado:
msg = input("Escreva uma mensagem:")
print(msg.lower)
-- EXECUTION TIME:
0.199337
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
<built-in method lower of str object at 0x7f1c9b1a5300>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:55:58) 
-- CODE:
#Leitura da mensagem a partir do teclado:
msg = input("Escreva uma mensagem:")
print(msg.lower)
-- EXECUTION TIME:
0.191833
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
<built-in method lower of str object at 0x7ff03897e300>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:55:58) 
-- CODE:
#Leitura da mensagem a partir do teclado:
msg = input("Escreva uma mensagem:")
print(msg.lower)
-- EXECUTION TIME:
0.316554
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
<built-in method lower of str object at 0x7f069468f300>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:55:58) 
-- CODE:
#Leitura da mensagem a partir do teclado:
msg = input("Escreva uma mensagem:")
print(msg.lower)
-- EXECUTION TIME:
0.332358
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
<built-in method lower of str object at 0x7f7803409300>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:55:58) 
-- CODE:
#Leitura da mensagem a partir do teclado:
msg = input("Escreva uma mensagem:")
print(msg.lower)
-- EXECUTION TIME:
0.153469
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
<built-in method lower of str object at 0x7fc159170300>
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 15:56:46) 
-- CODE:
#Leitura da mensagem a partir do teclado:
msg = input("Escreva uma mensagem:")
print(msg.upper())
-- EXECUTION TIME:
0.165386
-- TEST CASE 1:
---- input:
Primeiro_caso_de_teste
---- correct output:
PRIMEIRO_CASO_DE_TESTE
---- user output:
PRIMEIRO_CASO_DE_TESTE
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
